# calmui

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  locales.toml
crates/calmui_form_derive/: Cargo.toml
docs/: backdrop-material-plan.md  behavior-test-coverage.md  component-depth-matrix.csv  component-state-matrix.md  component-state-principles.md  form-v1.md  i18n.md  implementation-plan.md  layout-depth-full-evaluation.md  layout-depth-impact-report.md  layout-depth-remediation-plan.md  phase-1-design.md  public-api-facade.md  token-refactor-roadmap.md
src/: application.rs  components.rs  contracts.rs  feedback.rs  i18n.rs  icon.rs  id.rs  lib.rs  motion.rs  overlay.rs  prelude.rs  provider.rs  test_public_api.rs  theme.rs  tokens.rs
src/components/: accordion.rs  action_icon.rs  alert.rs  app_shell.rs  badge.rs  breadcrumbs.rs  button.rs  checkbox.rs  chip.rs  control.rs  divider.rs  drawer.rs  field_variant.rs  hovercard.rs  icon.rs  indicator.rs  input.rs  interaction_adapter.rs  layers.rs  layout.rs  loader.rs  loading_overlay.rs  markdown.rs  menu.rs  menu_state.rs  mod.rs  modal.rs  number_input.rs  overlay.rs  pagination.rs  paper.rs  popover.rs  popup.rs  popup_state.rs  primitives.rs  progress.rs  radio.rs  range_slider.rs  rating.rs  scroll_area.rs  (+34 more)
src/feedback/: mod.rs
src/form/: binding.rs  controller.rs  draft.rs  mod.rs  tests.rs  validation.rs
src/foundation/: mod.rs
src/icon/: mod.rs
src/overlay/: mod.rs
src/provider/: mod.rs
src/style/: mod.rs
src/theme/: component_theme_dsl_impls.rs  mod.rs  overrides_api.rs  themable_impls.rs
src/widgets/: mod.rs
tests/: components.rs  derive_form_model_ui.rs  public_api.rs
tests/components/: behavior_coverage.rs  behavior_matrix.rs  component_coverage.rs  component_smoke.rs  contract_matrix.rs  flattening_invariants.rs  id_ctx_enforcement.rs  (+3 more)
(+8 files in other folders)
